      -------------------------------------------------------------

This file should be used to summarize modifications introduced in the 
code and to keep track of all tags.

     ---------------------------------------------------------------
     * Please list in reverse chronological order (last date on top)
     ---------------------------------------------------------------

20-Oct-2014 A.Ribon        (had-hadronization-V10-00-09) 
- G4VLongitudinalStringDecay.cc : mixing between the vector mesons
  rho0 and omega have been changed from 50% (rho0) - 50% (omega) to
  100% (rho0) - 0% (omega), in order to reduce the pi0 production. 
  Expected little effects in thin-target, and significant effects
  in hadronic showers in calorimeters.

15-Oct-2014 V.Uzhinsky     (had-hadronization-V10-00-08)
- Essential improvement of QGS hadronization.
  Fragmentation functions of quarks and di-quarks are closed to Kaidalov's
  and Shabelskii's ones. G4QGSMFragmentation::GetLightConeZ was almost
  re-written. Ionk algorithm is inserted for sampling light-cone momentum
  fraction, z. Parameters of the fragmentation were tuned. They will be
  improved after a revision of the QGSM string creation algorithm.
- The algorith of G4QGSMFragmentation::SplitEandP was improved. It is 
  faster now.

29-Sep-2014, V.Uzhinsky    (had-hadronization-V10-00-07)
- Essential improvement of hadronization.
- Parameters and string fragmentation functions of 
  G4LundStringFragmentation.cc were tuned, assuming that the weight of
  uu-diquarks in protons is 1/6.
- Threatment of string decay direction was improved in G4FragmentingString.cc
  and G4LundStringFragmentation.cc
- EnergyAndMomentumCorrector was improved in G4ExcitedStringDecay.cc
- The method DiQuarkSplitUp in G4VLongitudinalStringDecay.cc is turned to
  virtual, and the corresponding methods were introduced in
  G4LundStringFragmentation.cc and G4QGSMFragmentation.cc
- Debugging possibilities are improved.
